# orchestraDocker

./: .gitignore  Dockerfile  README.md
orchestra/: info.txt
project/: CMakeLists.txt  Dockerfile  main.cpp
